--- a/project/appsettings.json
+++ b/project/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDb": "Server=localhost;Port=5432;Database=footballCatalogDb;User Id=postgres;Password=password"
+  }
 }
