removed local connectionString

--- a/project/appsettings.json
+++ b/project/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDb": "Server=localhost;Port=5432;Database=footballCatalogDb;User Id=postgres;Password=password"
+    "AppDb": ""
   }
 }
