--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
@@ -20,9 +17,31 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 5.0.x
+    - name: Edit a .NET Core database connection string in appsettings.json
+      # You may pin to the exact commit or the version.
+      # uses: benday-inc/edit-dbconnstr-in-appsettings@0ff77d3f76b78f1a9010551a2b4d9b406838dec6
+      uses: benday-inc/edit-dbconnstr-in-appsettings@v1.3
+      with:
+        # name of the connection string
+        name: "AppDb"
+        # value for the connection string
+        connectionString: '${{ secrets.CONNECTION_STRING }}'
+        # path to your appsettings.json file
+        pathToSettingsFile: ./project/appsettings.json
+      
+    - name: Build with dotnet
+      run: dotnet build --configuration Release 
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Publish
+      run: dotnet publish ./project/project.csproj -c Release -o website
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: website
+        path: project/**
+        if-no-files-found: error    
